# QRkot_spreadsheets

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 01_add_models.py
app/: main.py
app/api/: invest.py  routers.py  validators.py
app/api/endpoints/: charity_project.py  donation.py  google_api.py  user.py
app/core/: config.py  db.py  google_client.py  init_db.py  user.py
app/crud/: base.py  charity_project.py  donation.py
app/models/: base.py  charity_project.py  donation.py
app/schemas/: __init__.py  charity_project.py  donation.py  user.py
app/service/: __init__.py  google_api.py  messages.py  number.py
